Fixed position on mobile

--- a/front/src/css/catalog.styl
+++ b/front/src/css/catalog.styl
@@ -75,6 +75,8 @@
     background-position-x center
     background-position-y 15vh
     background-attachment fixed
+    @media screen and (max-width: $max-width-mobile)
+        background-position-y center
     img
         height 50%
         width auto
